--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
               <div class="product-info">
                 <h2>Flower Shop </h2>
                 <p class="price">E-commerce</p>
-                <a href="/checkout.html"><button class="button" >see preview here</button></a>
+                <a href="/flowershop/floweshop.html"><button class="button" >see preview here</button></a>
               </div>
             </div>
         
@@ -171,7 +171,7 @@
               <div class="product-info">
                 <h2>Bicycle Shop</h2>
                 <p class="price">E-commerce</p>
-                <a href="/checkout.html"><button class="button" >see preview here</button></a>
+                <a href="/bikeshop v2.0/html/bikeshop.html"><button class="button" >see preview here</button></a>
               </div>
             </div>
         
